# k8s

./: .gitignore  dashboard-ingress.yaml  egeria_ingress.yaml  egeria_pres.yaml  fuseki_ingress.yaml  make-cert.sh  make-secret.sh  mgcp_ingress.yaml  rc.local  renew-cert.sh  setup.sh  skosmos_ingress.yaml  test_ingress.yaml
DT/: .gitignore  DT.html  Makefile  almere.html  build.py  load3dbag.sh  tojson.sh  tokml.sh
asp.net/: Dockerfile  Makefile  Program.cs  Startup.cs
docker-python/: .dockerignore  Dockerfile  Makefile  app.py  pythonapp-config.yaml  pythonapp-deploy.yaml  requirements.txt
jena/: pand.sh  pg.sh  query.rq  query.sh  scan.rq  start.sh
mapserver/: make_top100.sh  make_top25.sh  mapserver-configmap.yaml  mapserver-data-pv.yaml  mapserver-data-pvc.yaml  mapserver-deployment.yaml  mapserver-fcgi-deployment.yaml  merge.sh  top100.map  top25.map
minio/: blob-deploy.yaml  default-deploy.yaml  default-storage.yaml
postgres/: dumproles.sh  hartbeat.sh  mkbac.sh  myclaim.yaml  pg_hba.conf  pgadmin-deploy.yaml  pgadmin-service.yaml  pgstop  postgres-configmap.yaml  postgres-deployment.yaml  postgres-reset.yaml  postgres-service.yaml  postgres-storage.yaml  postgresql.conf
rapi/: Cargo.toml  Rocket.toml  stress.sh
rapi/src/: main.rs  tests.rs
redis/: redis-master-deploy.yaml  values-production.yaml
rqs/: Cargo.toml
rqs-cached/: Cargo.toml
skosmos/: export.sh  fuseki-cache-claim0-persistentvolumeclaim.yaml  fuseki-cache-deployment.yaml  fuseki-cache-service.yaml  fuseki-cache-volume.yaml  fuseki-claim0-persistentvolumeclaim.yaml  load.sh  (+7 more)
(+43 files in other folders)
