[package]
name = "rapi"
version = "0.1.0"
authors = ["Tom Vijlbrief <tvijlbrief@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.4.5"
#features = ["private-cookies"]

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["postgres_pool"]

[dependencies.lazy_static]
version = "1.4.0"
